# ccm-esp32-vision-node

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
components/camera_node/: CMakeLists.txt  CameraNode.cpp  CameraNode.hpp
components/cv_pipeline/: CMakeLists.txt  CvPipeline.cpp  CvPipeline.hpp
components/drivers/: CMakeLists.txt
components/settings/: CMakeLists.txt  Settings.cpp  Settings.hpp
components/stream_server/: CMakeLists.txt  StreamServer.cpp  StreamServer.hpp
components/utils/: CMakeLists.txt  FrameTimer.hpp  Logger.hpp
docs/: README.md  architecture.md
examples/: README.md
examples/basic_fps_logger/: CMakeLists.txt  README.md
examples/basic_fps_logger/main/: main.cpp
firmware/: CMakeLists.txt
firmware/main/: CMakeLists.txt  main.cpp
simulation/: CMakeLists.txt  README.md  SimMain.cpp
simulation/include/: esp_camera.h  esp_heap_caps.h  esp_log.h  esp_timer.h
